# foo-bar-baz

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yaml
core/: Cargo.toml
core/src/: exec_js.rs  lib.rs  model.rs  tree_sitter.rs
src/: exec_js.rs  main.rs  tree_sitter.rs
src/model/: rule.rs  ruleset.rs  utils.rs
