[package]
name = "prototyping"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "exec_js"

[[bin]]
name = "tree_sitter"



[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]


[dependencies]
core = {path = "core"}

