[package]
name = "prototyping"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exec_js"

[[bin]]
name = "tree_sitter"

[[bin]]
name = "json_deserialization"

[[bin]]
name = "json_serialization"

[[bin]]
name = "yaml_load"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]


[dependencies]
core = {path = "core"}
serde = "1.0.163"
serde_json = "1.0.96"
serde_derive = "1.0.163"
serde_yaml = "0.9.21"
